# tadl-py

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-app.yml  python-tests.yml
tadl/: __init__.py  batch_loader.py  descriptor.py  match.py  query.py  query_batch.py  query_group.py  query_interface.py  types.py
tests/: test_query_deduplication.py  test_query_paramspec.py
